[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Sprite/Moving/Seastar.png" type="Texture" id=1]
[ext_resource path="res://Element/Mobs/seastar.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 16.0

[sub_resource type="Animation" id=2]
resource_name = "idle-loop"
length = 10.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 7, 10 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 12.0, -12.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3, 5.5, 8.5, 10 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 2, -2 ), Vector2( 1, 2 ), Vector2( -3, 1 ), Vector2( 0, 0 ) ]
}

[node name="Seastar" type="Node2D"]

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="BumperDetect" type="Area2D" parent="Sprite"]

[node name="BumpShape" type="CollisionShape2D" parent="Sprite/BumperDetect"]
position = Vector2( 0, 2 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
anims/idle-loop = SubResource( 2 )
[connection signal="body_entered" from="Sprite/BumperDetect" to="Sprite" method="_on_BumperDetect_body_entered"]
[connection signal="body_exited" from="Sprite/BumperDetect" to="Sprite" method="_on_BumperDetect_body_exited"]
[connection signal="animation_finished" from="Sprite/AnimationPlayer" to="Sprite" method="_on_AnimationPlayer_animation_finished"]
